# AutostereogramSolver

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  copy_gc_files_with_rename.sh  get_code_cov.sh
src/: DepthmapDisplayer.cpp  DepthmapDisplayer.h  StereogramBuilder.cpp  StereogramBuilder.h  StereogramSolver.cpp  StereogramSolver.h  StereogramSolverTest.cpp  StereogramTest.cpp  main.cpp  mainBuilder.cpp  mainDisplayer.cpp  mainSolver.cpp
